--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,5 @@ spring.servlet.multipart.max-request-size = 10MB
 spring.jpa.show-sql=true
 
 spring.jpa.properties.hibernate.format_sql=true
+logging.file.name= log.txt
+logging.level.sql = error
