--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -19,7 +19,7 @@ services:
     container_name: db
     ports:
       - 5433:5432
-    restart: always
+    restart: unless-stopped
     volumes:
       - test:/var/lib/postgresql/data
     environment:
