--- a/carsharing-impl/pom.xml
+++ b/carsharing-impl/pom.xml
@@ -22,10 +22,12 @@
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-data-jpa</artifactId>
     </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-security</artifactId>
     </dependency>
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
@@ -116,6 +118,12 @@
       <artifactId>modelmapper</artifactId>
       <version>3.1.0</version>
     </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-api</artifactId>
+      <version>0.11.5</version>
+    </dependency>
+
     <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-test</artifactId>
