--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
   <parent>
     <groupId>org.springframework.boot</groupId>
     <artifactId>spring-boot-starter-parent</artifactId>
-    <version>2.7.17</version>
+    <version>3.2.4</version>
     <relativePath/> <!-- lookup parent from repository -->
   </parent>
   <groupId>by.ruslan.radzevich</groupId>
@@ -22,6 +22,10 @@
   </modules>
   <properties>
     <java.version>17</java.version>
+    <start-class>by.ruslan.radzevich.carsharingservice.CarsharingServiceApplication</start-class>
+    <spring-cloud.version>2023.0.1</spring-cloud.version>
+    <mapstruct.version>1.5.5.Final</mapstruct.version>
+    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>
   </properties>
 
   <dependencyManagement>
@@ -30,7 +34,7 @@
       <dependency>
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-web</artifactId>
-        <version>2.7.17</version>
+        <version>3.2.4</version>
       </dependency>
     </dependencies>
   </dependencyManagement>
