--- a/carsharing-impl/pom.xml
+++ b/carsharing-impl/pom.xml
@@ -60,11 +60,7 @@
       <version>1.7.0</version>
     </dependency>
 
-    <dependency>
-      <groupId>io.jsonwebtoken</groupId>
-      <artifactId>jjwt</artifactId>
-      <version>0.9.1</version>
-    </dependency>
+
 
     <dependency>
       <groupId>org.mapstruct</groupId>
@@ -118,11 +114,26 @@
       <artifactId>modelmapper</artifactId>
       <version>3.1.0</version>
     </dependency>
+
     <dependency>
       <groupId>io.jsonwebtoken</groupId>
       <artifactId>jjwt-api</artifactId>
       <version>0.11.5</version>
     </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-impl</artifactId>
+      <version>0.11.5</version>
+      <scope>runtime</scope>
+    </dependency>
+    <dependency>
+      <groupId>io.jsonwebtoken</groupId>
+      <artifactId>jjwt-jackson</artifactId>
+      <version>0.11.5</version>
+      <scope>runtime</scope>
+    </dependency>
+
+
 
     <dependency>
       <groupId>org.springframework.boot</groupId>
